Fixed and working 100%. The only problem with these sort pages is the header is messed up. Account icon's circle radius is an oval, and the categories in the header are too low

--- a/public/css/sortPage.css
+++ b/public/css/sortPage.css
@@ -16,7 +16,7 @@ main {
   /*padding: 20px 20px 100px 20px;*/
 }
 
-/* Styling for the header */
+/* Styling for Header */
 header {
   background: #232d32;
   width: 100%;
@@ -30,9 +30,7 @@ header h1 {
   margin-left: 10px;
   padding-right: 20px;
   padding-left: 10px;
-  height: 37px;
 }
-
 
 a {
   text-decoration: none;
@@ -41,9 +39,6 @@ a {
 
 .header-list-left{
   display: inline-block;
-  height: 37px;
-  position: fixed;
-  top: 10px;
 }
 .header-list-right{
   display: inline-block;
@@ -70,7 +65,28 @@ a {
   text-decoration: none;
   color: white;
   transition-duration: 0.4s;
+}
 
+div .container-1 {
+    position: relative;
+    top: -5px;
+}
+
+i.fa {
+    color: white;
+}
+
+input#search {
+  width: 150px;
+  height: 25px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  position: relative;
+  padding-left: 5px;
+  margin-left: 5px;
 }
 
 .header-item a:hover {
@@ -78,50 +94,121 @@ a {
 }
 /*Account Dropdown for Header*/
     /*Dropdown Button*/
-.dropbtn {
-  background-color: #4CAF50;
-  border-radius:50%;
-  margin-top: 1px;
-  padding: 2px;
-  border: none;
-  cursor: pointer;
+    .dropbtn {
+        background-color: #4CAF50;
+        border-radius:50%;
+        margin-top: 1px;
+        padding: 2px;
+        border: none;
+        cursor: pointer;
+    }
+
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #3e8e41;
+    }
+
+    /* Styling for Main */
+    main {
+        display: inline-block;
+        //background-color: lightgray;
+        padding: 20px 20px 100px -30px;
+        min-height: 300px;
+        width: 100%;
+    }
+
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        right:0;
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        transition-duration: 0.4s;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: #f1f1f1}
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
+/*Account Dropdown for Header*/
+    /*Dropdown Button*/
+    .dropbtn {
+        background-color: #4CAF50;
+        border-radius:50%;
+        margin-top: 1px;
+        padding: 2px;
+        border: none;
+        cursor: pointer;
+    }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41;
-}
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #3e8e41;
+    }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+    /* Styling for Main */
+    main {
+        display: inline-block;
+        //background-color: lightgray;
+        padding: 20px 20px 100px -30px;
+        min-height: 300px;
+        width: 100%;
+    }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  right:0;
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        right:0;
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        transition-duration: 0.4s;
+    }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-display:block;
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: #f1f1f1}
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 input#headerSearch {
